--- a/src/styles.css
+++ b/src/styles.css
@@ -120,3 +120,17 @@ input[type=radio] {
   top: -1px;
   left: 50%;
 }
+
+/* -----    scrollbar  ----- */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--light-grey);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--contrast);
+}
